k8s/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx
  ports:
    - port: 80 # This is the port that the service will listen on
      targetPort: 80 # This is the port that the service will forward traffic to
      protocol: TCP
